# memoism

./: .claudeignore  .env.local.example  .gitignore  AGENTS.md  BRANCH_COMPARISON.md  CLAUDE.md  CLAUDE_MAIN.md  DESIGN.md  FRONTEND_ISSUES_REPORT.md  MVP_ANALYSIS_REPORT.md  PASSWORD_HASHING_MIGRATION.md  QA_CHECKLIST.md  README.md  SETUP.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  plan.md  pnpm-lock.yaml  prisma.config.ts  remind.md  run.md  task.md  vercel.json  기획방법.md
Blender/: Untitled.blend
MidtermEvaluation/: asset_inventory.html  (+2 more)
apps/backend/: .env.example  backup_users.py  database.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
apps/backend/auth/: router.py  schemas.py  utils.py
apps/backend/diary/: router.py  schemas.py
apps/backend/follow/: router.py  schemas.py
apps/backend/memoism_backend.egg-info/: SOURCES.txt  requires.txt
apps/backend/src/: __init__.py  database.py  main.py  models.py
apps/backend/src/auth/: dependencies.py  router.py  schemas.py  utils.py
apps/backend/src/chat/: __init__.py  router.py  schemas.py
apps/backend/src/common/: __init__.py  errors.py
apps/backend/src/diary/: __init__.py  router.py  schemas.py
apps/backend/supabase/migrations/: 20240518_initial_schema.sql  20250921_add_location_to_diary.sql
apps/backend/tests/: conftest.py
apps/backend/tests/auth/: test_auth.py
apps/backend/tests/chat/: __init__.py  test_chat.py
apps/backend/tests/diary/: __init__.py  test_diary.py
apps/backend/tests/integration/: test_user_journey.py
(+243 files in other folders)
